# small_django

./: README.md  docker-compose.yaml
.envs/: dev.env  local.env  postgres.env
core/: .dockerignore  pyproject.toml  requirements.txt
core/apps/movies/: models.py  serializers.py  urls.py  views.py
core/apps/movies/migrations/: 0001_initial.py
core/apps/users/: admin.py  managers.py  models.py  permissions.py  serializers.py  urls.py  views.py
core/apps/users/migrations/: 0001_initial.py  0002_user_is_owner_user_is_public_user_is_staff_and_more.py  0003_remove_user_is_public.py
core/docker/: Dockerfile  entrypoint.sh  script-django.sh
core/simple/: asgi.py  dev.py  env.py  urls.py  wsgi.py
core/simple/settings/: local.py
